crates/rs_db_parser/src/snapshots/rs_db_parser__value__tests__case@simple-str-2.snap
---
source: crates/rs_db_parser/src/value.rs
description: "Input: 'hello world'\nType: VarChar(50)"
expression: v
---
(
    LocatedSpan {
        offset: 0,
        line: 1,
        fragment: "'hello world'",
        extra: (),
    },
    VarChar(
        "hello world",
    ),
)
