crates/rs_db_parser/src/snapshots/rs_db_parser__value__tests__case@simple-str-3.snap
---
source: crates/rs_db_parser/src/value.rs
description: "Input: 'hello\nworld'\nType: VarChar(50)"
expression: v
---
(
    LocatedSpan {
        offset: 0,
        line: 1,
        fragment: "'hello\nworld'",
        extra: (),
    },
    VarChar(
        "hello\nworld",
    ),
)
