crates/rs_db_parser/src/snapshots/rs_db_parser__value__tests__case@simple-str.snap
---
source: crates/rs_db_parser/src/value.rs
description: "Input: 'hello'\nType: VarChar(5)"
expression: v
---
(
    LocatedSpan {
        offset: 0,
        line: 1,
        fragment: "'hello'",
        extra: (),
    },
    VarChar(
        "hello",
    ),
)
